--- a/nodeDefaultConfig.yml
+++ b/nodeDefaultConfig.yml
@@ -1,10 +1,10 @@
 #default config for coinex
 loadMarketsOnline: false
 markets:
-  #  - value: BTCUSDT
-  #    startTime: 1606780800
-  - name: KAVAUSDT
-    startTime: 1606780800
+#  - value: BTCUSDT
+#    startTime: 1606780800
+#  - name: KAVAUSDT
+#    startTime: 1606780800
 resolutions:
   #  - value: 60
   #    label: 1min
@@ -15,9 +15,9 @@ resolutions:
   #  - value: 300
   #    label: 5min
   #    duration: 300000000000
-  #  - value: 900
-  #    label: 15min
-  #    duration: 900000000000
+  - value: 900
+    label: 15min
+    duration: 900000000000
   #  - value: 1800
   #    label: 30min
   #    duration: 1800000000000
@@ -33,18 +33,21 @@ resolutions:
   #  - value: 21600
   #    label: 6hour
   #    duration: 21600000000000
-  - value: 43200
-    label: 12hour
-    duration: 43200000000000
+#  - value: 43200
+#    label: 12hour
+#    duration: 43200000000000
 #  - value: 86400
 #    label: 1day
 #    duration: 86400000000000
-fakeTrading: true
-enableTrading: true
+fakeTrading: false
+enableTrading: false
 strategy:
   hft: true
   bufferedCandleCount: 400
   indicatorUpdatePeriod: 1000000000
+  minGainPercent: 1
+  lossPercent: 5
+  maxGainPercent: 5
 indicatorConfigs:
   MovingAverageLength: 20
   MovingAverageSource: close
