add wallet controller

--- a/nodeDefaultConfig.yml
+++ b/nodeDefaultConfig.yml
@@ -1,5 +1,5 @@
 #default config for coinex
-loadMarketsOnline: false
+loadMarketsOnline: true
 markets:
 #  - value: BTCUSDT
 #    startTime: 1606780800
@@ -15,9 +15,9 @@ resolutions:
   #  - value: 300
   #    label: 5min
   #    duration: 300000000000
-  #  - value: 900
-  #    label: 15min
-  #    duration: 900000000000
+  - value: 900
+    label: 15min
+    duration: 900000000000
   #  - value: 1800
   #    label: 30min
   #    duration: 1800000000000
@@ -36,9 +36,9 @@ resolutions:
   #  - value: 43200
   #    label: 12hour
   #    duration: 43200000000000
-  - value: 86400
-    label: 1day
-    duration: 86400000000000
+#  - value: 86400
+#    label: 1day
+#    duration: 86400000000000
 fakeTrading: false
 enableTrading: false
 strategy:
