feat(brokerage): create sample wallet request

--- a/services/brokerage/configs/.env
+++ b/services/brokerage/configs/.env
@@ -1,4 +1,5 @@
-GRPC_PORT=11000
-HTTP_PORT=11001
+GRPC_PORT=13000
+HTTP_PORT=13001
+NETWORK_GRPC_PORT=12000
 MAX_LOGS_PER_PAGE=100
 DATABASE_CONNECTION=configs/mariadb.secret
