fix(eagle): change initiating process of indicators calculation

--- a/services/eagle/configs/.env
+++ b/services/eagle/configs/.env
@@ -1,9 +1,7 @@
-SERVICE_NAME=chipmunk
-VERSION=v0.1.0
-STORAGE_PROVIDER=mariadb
-POSTGRES_CONNECTION=configs/postgres.secret
-OHLC_WORKER_HEARTBEAT=1s
-CANDLE_BUFFER_LENGTH=5
-BROKERAGE_GRPC=10000
+SERVICE_NAME=eagle
+VERSION=v0.1.1
+INDICATORS_WORKER_HEARTBEAT=1s
+CANDLE_BUFFER_LENGTH=100
 CHIPMUNK_GRPC=11000
 VAULT_GRPC=12000
+EAGLE_GRPC=14000
