--- a/services/eagle/configs/.env
+++ b/services/eagle/configs/.env
@@ -1,6 +1,7 @@
 SERVICE_NAME=eagle
-VERSION=v0.1.1
+VERSION=v0.2.0
 INDICATORS_WORKER_HEARTBEAT=1s
+SIGNALS_WORKER_HEARTBEAT=1s
 CANDLE_BUFFER_LENGTH=100
 CHIPMUNK_GRPC=11000
 VAULT_GRPC=12000
