feat(dolphin): add new brokerage and show brokerage list

--- a/services/dolphin/configs/.env
+++ b/services/dolphin/configs/.env
@@ -1,10 +1,10 @@
 SERVICE_NAME=dolphin
 VERSION=v0.1.0
-BROKERAGE_GRPC=10000
-CHIPMUNK_GRPC=11000
-DOLPHIN_GRPC=15000
-EAGLE_GRPC=14000
-VAULT_GRPC=12000
+BROKERAGE_GRPC=:10000
+CHIPMUNK_GRPC=:11000
+DOLPHIN_GRPC=:15000
+EAGLE_GRPC=:14000
+VAULT_GRPC=:12000
 NETWORK_GRPC=13000
 
 GO_ENV=development
