feat(dolphin): start brokerage for collecting OHLC data

--- a/services/brokerage/configs/.env
+++ b/services/brokerage/configs/.env
@@ -1,5 +1,6 @@
 GRPC_PORT=10000
 HTTP_PORT=10001
 NETWORK_GRPC_PORT=13000
+CHIPMUNK_ADDRESS=:11000
 MAX_LOGS_PER_PAGE=100
 DATABASE_CONNECTION=configs/mariadb.secret
