implement wallet service

--- a/services/chipmunk/configs/.env
+++ b/services/chipmunk/configs/.env
@@ -1,9 +1,10 @@
 SERVICE_NAME=chipmunk
-VERSION=v0.1.1
+VERSION=v0.2.0
+GRPC_PORT=11000
 STORAGE_PROVIDER=mariadb
 DATABASE_CONNECTION=configs/mariadb.secret
 OHLC_WORKER_HEARTBEAT=1s
+WALLET_WORKER_HEARTBEAT=1m
 CANDLE_BUFFER_LENGTH=5
-BROKERAGE_GRPC=10000
-CHIPMUNK_GRPC=11000
-VAULT_GRPC=12000
+BROKERAGE_GRPC_ADDRESS=:10000
+NETWORK_GRPC_ADDRESS=:13000
