fix: Indicator response done(RSI-Stochastic-Bollinger band)

--- a/services/chipmunk/configs/.env
+++ b/services/chipmunk/configs/.env
@@ -5,6 +5,6 @@ STORAGE_PROVIDER=mariadb
 DATABASE_CONNECTION=configs/mariadb.secret
 OHLC_WORKER_HEARTBEAT=1s
 WALLET_WORKER_HEARTBEAT=10s
-CANDLE_BUFFER_LENGTH=5
+CANDLE_BUFFER_LENGTH=1000
 BROKERAGE_GRPC_ADDRESS=:10000
 NETWORK_GRPC_ADDRESS=:13000
