feat(chipmunk): complete refactor

--- a/services/chipmunk/configs/.env
+++ b/services/chipmunk/configs/.env
@@ -7,4 +7,5 @@ OHLC_WORKER_HEARTBEAT=1s
 WALLET_WORKER_HEARTBEAT=10s
 CANDLE_BUFFER_LENGTH=1000
 BROKERAGE_GRPC_ADDRESS=:10000
+EAGLE_GRPC_ADDRESS=:12000
 NETWORK_GRPC_ADDRESS=:13000
