feat(eagle): complete service refactor

--- a/services/eagle/configs/.env
+++ b/services/eagle/configs/.env
@@ -1,8 +1,10 @@
 SERVICE_NAME=eagle
 VERSION=v0.2.0
+STORAGE_PROVIDER=mariadb
+DATABASE_CONNECTION=configs/mariadb.secret
+GRPC_PORT=12000
 INDICATORS_WORKER_HEARTBEAT=1s
 SIGNALS_WORKER_HEARTBEAT=1s
 CANDLE_BUFFER_LENGTH=100
-CHIPMUNK_GRPC=11000
-VAULT_GRPC=12000
-EAGLE_GRPC=14000
+CHIPMUNK_GRPC_ADDRESS=11000
+BROKERAGE_GRPC_ADDRESS=11000
