--- a/services/brokerage/configs/.env
+++ b/services/brokerage/configs/.env
@@ -1,6 +1,9 @@
+SERVICE_NAME=brokerage
+VERSION=v1.0.0
 GRPC_PORT=10000
-HTTP_PORT=10001
-NETWORK_GRPC_PORT=13000
-CHIPMUNK_ADDRESS=:11000
+HTTP_PORT=10010
+NETWORK_GRPC_ADDRESS=:13000
+CHIPMUNK_GRPC_ADDRESS=:11000
+EAGLE_GRPC_ADDRESS=:12000
 MAX_LOGS_PER_PAGE=100
-DATABASE_CONNECTION=configs/mariadb.secret
+DATABASE_CONNECTION=configs/postgres.secret
