--- a/services/eagle/configs/.env
+++ b/services/eagle/configs/.env
@@ -1,10 +1,10 @@
 SERVICE_NAME=eagle
 VERSION=v0.2.0
-STORAGE_PROVIDER=mariadb
 DATABASE_CONNECTION=configs/postgres.secret
 GRPC_PORT=12000
 INDICATORS_WORKER_HEARTBEAT=1s
 SIGNALS_WORKER_HEARTBEAT=1s
 CANDLE_BUFFER_LENGTH=100
-CHIPMUNK_GRPC_ADDRESS=11000
-BROKERAGE_GRPC_ADDRESS=11000
+CHIPMUNK_GRPC_ADDRESS=:11000
+BROKERAGE_GRPC_ADDRESS=:10000
+TELEGRAM_BOT_GRPC_ADDRESS=:14000
