--- a/services/eagle/configs/.env
+++ b/services/eagle/configs/.env
@@ -8,3 +8,4 @@ CANDLE_BUFFER_LENGTH=100
 CHIPMUNK_GRPC_ADDRESS=:11000
 BROKERAGE_GRPC_ADDRESS=:10000
 TELEGRAM_BOT_GRPC_ADDRESS=:14000
+BROADCAST_CHANNEL_ID=-1001263706636
