fix: lunch via telegram bot and test data collection

--- a/services/eagle/configs/.env
+++ b/services/eagle/configs/.env
@@ -1,6 +1,6 @@
 SERVICE_NAME=eagle
 VERSION=v0.2.0
-DATABASE_CONNECTION=configs/postgres.secret
+DATABASE_CONNECTION=../configs/postgres.secret
 GRPC_PORT=12000
 INDICATORS_WORKER_HEARTBEAT=1s
 SIGNALS_WORKER_HEARTBEAT=1s
