--- a/services/brokerage/configs/.env
+++ b/services/brokerage/configs/.env
@@ -6,4 +6,4 @@ NETWORK_GRPC_ADDRESS=:13000
 CHIPMUNK_GRPC_ADDRESS=:11000
 EAGLE_GRPC_ADDRESS=:12000
 MAX_LOGS_PER_PAGE=100
-DATABASE_CONNECTION=configs/postgres.secret
+DATABASE_CONNECTION=../configs/postgres.secret
