feat(core): create core service
remove brokerage service

--- a/services/eagle/configs/.env
+++ b/services/eagle/configs/.env
@@ -9,3 +9,4 @@ CHIPMUNK_GRPC_ADDRESS=:11000
 BROKERAGE_GRPC_ADDRESS=:10000
 TELEGRAM_BOT_GRPC_ADDRESS=:14000
 BROADCAST_CHANNEL_ID=-1001263706636
+REDIS_ADDRESS=localhost:6379
