--- a/services/chipmunk/deploy/Dockerfile
+++ b/services/chipmunk/deploy/Dockerfile
@@ -1,5 +1,14 @@
 FROM golang:alpine as builder
+
 ARG VERSION
+ARG BUILD_ID
+
+LABEL stage=builder
+LABEL build=$BUILD_ID
+
+#todo: after build in CI/CD script run next command to remove intermediate image
+# docker image prune --filter label=stage=builder --filter label=build=$BUILD_ID
+
 WORKDIR /src
 COPY . .
 RUN GO111MODULE=on CGO_ENABLED=0 go build -buildvcs=false -a -installsuffix cgo \
