--- a/services/eagle/deploy/Dockerfile
+++ b/services/eagle/deploy/Dockerfile
@@ -13,10 +13,10 @@ WORKDIR /src
 COPY . .
 RUN GO111MODULE=on CGO_ENABLED=0 go build -buildvcs=false -a -installsuffix cgo \
     -ldflags "-w -X main.Version=${VERSION}" \
-    -o ./build/core ./services/core/cmd
+    -o ./build/eagle ./services/eagle/cmd
 
 FROM alpine
 WORKDIR /app
 COPY --from=builder /src/build/ ./
-COPY ./services/core/assets ./assets
-ENTRYPOINT [ "./core" ]
+COPY ./services/eagle/assets ./assets
+ENTRYPOINT [ "./eagle" ]
