--- a/services/gateway/deploy/Dockerfile
+++ b/services/gateway/deploy/Dockerfile
@@ -20,3 +20,5 @@ WORKDIR /app
 COPY --from=builder /src/build/ ./
 #COPY ./services/gateway/assets ./assets
 ENTRYPOINT [ "./gateway" ]
+
+EXPOSE 8080
