--- a/services/gateway/deploy/Dockerfile
+++ b/services/gateway/deploy/Dockerfile
@@ -18,7 +18,7 @@ RUN GO111MODULE=on CGO_ENABLED=0 go build -buildvcs=false -a -installsuffix cgo 
 FROM alpine
 WORKDIR /app
 COPY --from=builder /src/build/ ./
-COPY ./services/gateway/configs/config.yaml ./configs/config.yaml
+#COPY ./services/gateway/configs/config.yaml ./configs/config.yaml
 #COPY ./services/gateway/assets ./assets
 ENTRYPOINT [ "./gateway" ]
 
