--- a/services/core/deploy/Dockerfile
+++ b/services/core/deploy/Dockerfile
@@ -18,5 +18,5 @@ RUN GO111MODULE=on CGO_ENABLED=0 go build -buildvcs=false -a -installsuffix cgo 
 FROM alpine
 WORKDIR /app
 COPY --from=builder /src/build/ ./
-COPY ./services/core/assets ./assets
+#COPY ./services/core/assets ./assets
 ENTRYPOINT [ "./core" ]
