--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -52,14 +52,14 @@ services:
 
   chipmunk:
     container_name: chipmunk
-    image: chipmunk:v2.1.1
+    image: chipmunk:v2.1.2
     build:
       context: ..
       dockerfile: services/chipmunk/deploy/Dockerfile
       args:
-        VERSION: v2.1.1
+        VERSION: v2.1.2
     volumes:
-      - /srv/configs/chipmunk/app.yaml:/app/configs/app.yaml
+      - /srv/configs/chipmunk/app.yaml:/app/configs/config.yaml
     networks:
       - gate
     depends_on:
@@ -69,14 +69,14 @@ services:
 
   core:
     container_name: core
-    image: core:v2.1.1
+    image: core:v2.1.2
     build:
       context: ..
       dockerfile: services/core/deploy/Dockerfile
       args:
-        VERSION: v2.1.1
+        VERSION: v2.1.2
     volumes:
-      - /srv/configs/core/app.yaml:/app/configs/app.yaml
+      - /srv/configs/core/app.yaml:/app/configs/config.yaml
     networks:
       - gate
     depends_on:
@@ -86,14 +86,14 @@ services:
 
   eagle:
     container_name: eagle
-    image: eagle:v1.1.1
+    image: eagle:v1.1.2
     build:
       context: ..
       dockerfile: services/eagle/deploy/Dockerfile
       args:
-        VERSION: v1.1.1
+        VERSION: v1.1.2
     volumes:
-      - /srv/configs/eagle/app.yaml:/app/configs/app.yaml
+      - /srv/configs/eagle/app.yaml:/app/configs/config.yaml
     networks:
       - gate
     depends_on:
@@ -103,14 +103,14 @@ services:
 
   gateway:
     container_name: gateway
-    image: gateway:v1.1.1
+    image: gateway:v1.1.2
     build:
       context: ..
       dockerfile: services/gateway/deploy/Dockerfile
       args:
-        VERSION: v1.1.1
+        VERSION: v1.1.2
     volumes:
-      - /srv/configs/gateway/app.yaml:/app/configs/app.yaml
+      - /srv/configs/gateway/app.yaml:/app/configs/config.yaml
     networks:
       - gate
     depends_on:
@@ -120,14 +120,14 @@ services:
 
   network:
     container_name: network
-    image: network:v1.1.3
+    image: network:v1.2.4
     build:
       context: ..
       dockerfile: services/network/deploy/Dockerfile
       args:
-        VERSION: v1.1.3
+        VERSION: v1.2.4
     volumes:
-      - /srv/configs/network/app.yaml:/app/configs/app.yaml
+      - /srv/configs/network/app.yaml:/app/configs/config.yaml
     networks:
       - gate
     depends_on:
@@ -137,14 +137,14 @@ services:
 
   telegram_bot:
     container_name: telegramBot
-    image: telegram_bot:v1.1.1
+    image: telegram_bot:v1.1.2
     build:
       context: ..
       dockerfile: services/telegramBot/deploy/Dockerfile
       args:
-        VERSION: v1.1.1
+        VERSION: v1.1.2
     volumes:
-      - /srv/configs/telegramBot/app.yaml:/app/configs/app.yaml
+      - /srv/configs/telegramBot/app.yaml:/app/configs/config.yaml
     networks:
       - gate
     depends_on:
