feat(gateway): automatically build API documents in build stage

--- a/services/gateway/deploy/Dockerfile
+++ b/services/gateway/deploy/Dockerfile
@@ -11,6 +11,10 @@ LABEL build=$BUILD_ID
 
 WORKDIR /src
 COPY . .
+
+RUN go install github.com/swaggo/swag/cmd/swag@latest
+RUN swag init -g ./services/gateway/cmd/main.go -o ./services/gateway/docs
+
 RUN GO111MODULE=on CGO_ENABLED=0 go build -buildvcs=false -a -installsuffix cgo \
     -ldflags "-w -X main.Version=${VERSION}" \
     -o ./build/gateway ./services/gateway/cmd
@@ -18,7 +22,7 @@ RUN GO111MODULE=on CGO_ENABLED=0 go build -buildvcs=false -a -installsuffix cgo 
 FROM alpine
 WORKDIR /app
 COPY --from=builder /src/build/ ./
-#COPY ./services/gateway/assets ./assets
+COPY ./services/gateway/docs ./docs
 ENTRYPOINT [ "./gateway" ]
 
 EXPOSE 8080
