--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   postgres:
-    container_name: postgres
+    container_name: postgreSQL
     image: postgres
     environment:
       - POSTGRES_USER=postgres
@@ -103,14 +103,16 @@ services:
 
   gateway:
     container_name: gateway
-    image: gateway:v1.1.3
+    image: gateway:v1.2.1
     build:
       context: ..
       dockerfile: services/gateway/deploy/Dockerfile
       args:
-        VERSION: v1.1.3
+        VERSION: v1.2.1
     volumes:
       - /srv/configs/gateway/app.yaml:/app/configs/config.yaml
+    ports:
+      - 8080:8080
     networks:
       - gate
     depends_on:
