feat: read docker secret from os env

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     container_name: postgres
     image: postgres
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - postgres_gate_data:/var/lib/postgresql/data
     networks:
@@ -22,7 +22,7 @@ services:
   redis:
     container_name: redis
     image: bitnami/redis:latest
-    command: redis-server --requirepass redis
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     environment:
       - ALLOW_EMPTY_PASSWORD=no
     volumes:
@@ -38,8 +38,8 @@ services:
     image: rabbitmq:3.8-management
     environment:
       - RABBITMQ_ERLANG_COOKIE=SWQOKODSQALRPCLNMEQG
-      - RABBITMQ_DEFAULT_USER=rabbitmq
-      - RABBITMQ_DEFAULT_PASS=rabbitmq
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USERNAME}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
       - RABBITMQ_DEFAULT_VHOST=/
     volumes:
       - rabbitmq_gate_data:/var/lib/rabbitmq
