--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: docker/setup-docker@v1
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install apt-transport-https ca-certificates curl software-properties-common
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update
+          sudo apt-get -y install docker-ce docker-ce-cli containerd.io
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -30,7 +36,7 @@ jobs:
           for service in "${services_array[@]}"; do
             echo "Building and deploying $service"
             cd services/"$service"
-            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest .
+            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest ./deploy
             docker push ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest
             cd ../..
             docker-compose -f "$DOCKER_COMPOSE_PATH" up -d "$service"
