--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,8 @@ jobs:
           IFS=',' read -ra services_array <<< "$services"
           for service in "${services_array[@]}"; do
             echo "Building and deploying $service"
-            cd services/"$service"
-            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest ./services/raven/deploy
-            docker push ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest
-            cd ../..
-            docker-compose -f "$DOCKER_COMPOSE_PATH" up -d "$service"
+            docker-compose -f deploy/docker-compose.yml build "$service"
+            docker-compose -f deploy/docker-compose.yml push "$service"
+
+            docker-compose -f ./deploy/docker-compose.yml up -d "$service"
           done
