--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           IFS=',' read -ra services_array <<< "$services"
           for service in "${services_array[@]}"; do
             echo "Building and deploying $service"
-            docker build -f services/raven/deploy/Dockerfile -t "$service":latest .
+            docker build -f services/raven/deploy/Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest .
             docker push ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest
 
             docker-compose -f ./deploy/docker-compose.yml up -d "$service"
