fix(raven): deploy to vps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,21 +39,30 @@ jobs:
             docker push ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest
           done
 
-      - name: Copy Docker Compose file to VPS
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SERVER_ADDRESS }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: deploy/docker-compose.yml
-          target: /gate/deploy/docker-compose.yml
+#      - name: Copy Docker Compose file to VPS
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.SERVER_ADDRESS }}
+#          username: ${{ secrets.SERVER_USERNAME }}
+#          key: ${{ secrets.SSH_PRIVATE_KEY }}
+#          source: deploy/docker-compose.yml
+#          target: /gate/deploy/docker-compose.yml
+#
+#      - name: SSH into VPS and Deploy
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.SERVER_ADDRESS }}
+#          username: ${{ secrets.SERVER_USERNAME }}
+#          key: ${{ secrets.SSH_PRIVATE_KEY }}
+#          script: |
+#            echo "Deploying services on VPS"
+#            ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }} 'docker-compose -f /gate/deploy/docker-compose.yml up -d'
 
       - name: SSH into VPS and Deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_ADDRESS }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            echo "Deploying services on VPS"
-            ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }} 'docker-compose -f /gate/deploy/docker-compose.yml up -d'
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ssh_key
+          chmod 600 ssh_key
+          ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }} "mkdir -p /gate/deploy"
+          scp -i ssh_key deploy/docker-compose.yml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }}:/gate/deploy
+          rm ssh_key
+          ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.SERVER_USERNAME }}${{ secrets.SERVER_ADDRESS }} "docker-compose -f /gate/deploy/docker-compose.yml up -d"
