chore(raven): change build step for github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           for service in "${services_array[@]}"; do
             echo "Building $service"
             cd services/"$service"
-            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$service:$version .
+            docker build -f services/$service/deploy/Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/$service:$version .
             docker push ${{ secrets.DOCKERHUB_USERNAME }}/$service:$version
           done
 
