chore(raven): load version from build section

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,6 @@ jobs:
           scp -i ssh_key deploy/docker-compose.yml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }}:./gate/deploy
           
           services=$(echo "${{ steps.services.outputs.services }}" | sed 's/,/ /g')
-          version=${{ steps.version.outputs.version }}
+          version=${{ build.steps.version.outputs.version }}
           ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }} "cd ./gate/deploy && VERSION=${version} docker-compose -f docker-compose.yml up -d" "${services[@]}"
           rm ssh_key
