--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    needs: build
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
