--- a/deploy/docker-compose.local.yml
+++ b/deploy/docker-compose.local.yml
@@ -52,7 +52,12 @@ services:
 
   chipmunk:
     container_name: chipmunk
-    image: gatec/chipmunk:${VERSION}
+    image: chipmunk:v2.1.3
+    build:
+      context: ..
+      dockerfile: services/chipmunk/deploy/Dockerfile
+      args:
+        VERSION: v2.1.3
     volumes:
       - /srv/configs/chipmunk/app.yaml:/app/configs/config.yaml
     networks:
@@ -64,7 +69,12 @@ services:
 
   core:
     container_name: core
-    image: gatec/core:${VERSION}
+    image: core:v2.1.3
+    build:
+      context: ..
+      dockerfile: services/core/deploy/Dockerfile
+      args:
+        VERSION: v2.1.3
     volumes:
       - /srv/configs/core/app.yaml:/app/configs/config.yaml
     networks:
@@ -76,7 +86,7 @@ services:
 
   eagle:
     container_name: eagle
-    image: gatec/eagle:${VERSION}
+    image: eagle:v1.1.3
     build:
       context: ..
       dockerfile: services/eagle/deploy/Dockerfile
@@ -94,6 +104,11 @@ services:
   raven:
     container_name: raven
     image: gatec/raven:${VERSION}
+#    build:
+#      context: ..
+#      dockerfile: services/raven/deploy/Dockerfile
+#      args:
+#        VERSION: v1.2.3
     volumes:
       - /srv/configs/raven/app.yaml:/app/configs/config.yaml
     ports:
@@ -107,7 +122,12 @@ services:
 
   network:
     container_name: network
-    image: gatec/network:${VERSION}
+    image: network:v1.2.5
+    build:
+      context: ..
+      dockerfile: services/network/deploy/Dockerfile
+      args:
+        VERSION: v1.2.5
     volumes:
       - /srv/configs/network/app.yaml:/app/configs/config.yaml
     networks:
@@ -119,7 +139,12 @@ services:
 
   telegram_bot:
     container_name: telegramBot
-    image: gatec/telegramBot:${VERSION}
+    image: telegramBot:v1.1.2
+    build:
+      context: ..
+      dockerfile: services/telegramBot/deploy/Dockerfile
+      args:
+        VERSION: v1.1.2
     volumes:
       - /srv/configs/telegramBot/app.yaml:/app/configs/config.yaml
     networks:
