chore(chipmunk,core,eagle,network,raven): rebuild

--- a/deploy/docker-compose.local.yml
+++ b/deploy/docker-compose.local.yml
@@ -139,7 +139,7 @@ services:
 
   telegram_bot:
     container_name: telegramBot
-    image: telegramBot:v1.1.2
+    image: telegram_bot:v1.1.2
     build:
       context: ..
       dockerfile: services/telegramBot/deploy/Dockerfile
