--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,10 +65,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -y install apt-transport-https ca-certificates curl software-properties-common
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          sudo apt-get update
-          sudo apt-get -y install docker-ce docker-ce-cli containerd.io
 
       - name: Determine version number
         id: version
@@ -83,7 +79,7 @@ jobs:
           ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }} "mkdir -p ./gate/deploy"
           scp -i ssh_key deploy/docker-compose.yml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }}:./gate/deploy
           
-          services=$(echo "${{ steps.services.outputs.services }}" | sed 's/,/ /g')
+          services=$(git log -1 --pretty=format:%s | grep -o -P "(?<=\().*?(?=\))")
           version=${{ steps.version.outputs.version }}
           ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }} "cd ./gate/deploy && VERSION=${version} docker-compose -f docker-compose.yml up -d" "${services[@]}"
           rm ssh_key
